--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==2.0.1
-joblib==1.0.1
-scikit-learn==0.24.2
-numpy==1.21.0
-gunicorn==20.1.0
+Flask
+joblib
+numpy
+scikit-learn
+pandas
+gunicorn
 ucimlrepo
